# Learning_Poetry

fastapi-helloworld/: pyproject.toml
fastapi-helloworld/fastapi_helloworld/: main.py
fastapi-helloworld/tests/: test_main.py
fastapi_docs_practice/: pyproject.toml
fastapi_docs_practice/fastapi_docs_practice/: body.py  body_multi_param.py  cookie_param.py  form_data.py  path.py  path_param.py  query.py  query_param.py  query_parm_model.py  response_model.py  tags.py
