[tool.poetry]
name = "fastapi-docs-practice"
version = "0.1.0"
description = ""
authors = ["syedshahmirsultan <syedshahmirsultan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
pytest = "^8.3.3"
python-multipart = "^0.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
